# pgschemapc

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: artifacts.yml  gh-pages.yml
docs/src/: SUMMARY.md  overview.md
docs/src/general/: getting-started.md  installation.md
examples/: adult.pgs  course.pg  course.pgs  person.pgs  product.pgs  simple.pgs  user.pgs
src/: boolean_expr.rs  card.rs  cli.rs  edge.rs  evidence.rs  formal_base_type.rs  formal_edge_type.delete  formal_graph_type.delete  formal_graph_type.rs  key.rs  label_property_spec.rs  lib.rs  main.rs  node.rs  node_id.rs  pg.rs  pgs_error.rs  property_value_spec.rs  record.rs  record_type.rs  semantics_error.rs  test_suite.rs  type_map.rs  validation_result.rs  value.rs  value_type.rs
src/parser/: map.rs  map.rustemo  map_actions.rs  map_builder.rs  mod.rs  pg.rs  pg.rustemo  pg_actions.rs  pg_builder.rs  pgs.rs  pgs.rustemo  pgs_actions.rs  pgs_builder.rs
tests/: basic.pgs
